force-app/main/default/objects/CC_Document_Item__c/CC_Document_Item__c.object-meta.xml
<CustomObject>
    <label>Document Item</label>
    <nameField>
        <displayFormat>DI - {0000}</displayFormat>
        <label>Document Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>