force-app/main/default/objects/CC_Document_Item__c/fields/CC_Account__c.field-meta.xml
<CustomField>
    <fullName>CC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>