force-app/main/default/objects/CC_Document_Item__c/fields/CC_Allow_Multiple__c.field-meta.xml
<CustomField>
    <fullName>CC_Allow_Multiple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multiple</label>
    <type>Checkbox</type>
</CustomField>