force-app/main/default/objects/CC_Document_Item__c/fields/CC_Application_Contact__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Contact</label>
    <referenceTo>CC_Application_Contact__c</referenceTo>
    <relationshipName>CC_Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>