force-app/main/default/objects/CC_Document_Item__c/fields/CC_Authorization__c.field-meta.xml
<CustomField>
    <fullName>CC_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorization</label>
    <referenceTo>CC_Authorization__c</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>