force-app/main/default/objects/CC_Document_Item__c/fields/CC_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Background Check</label>
    <referenceTo>CC_Background_Check__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>