force-app/main/default/objects/CC_Document_Item__c/fields/CC_Background_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Document_Type__c</fullName>
    <label>Background Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCYF/CANTS Background Check</fullName>
            </value>
            <value>
                <fullName>Comprehensive Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>