force-app/main/default/objects/CC_Document_Item__c/fields/CC_Benefit_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CC_Benefit_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Assignment</label>
    <referenceTo>BenefitAssignment</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>