force-app/main/default/objects/CC_Document_Item__c/fields/CC_Business_License__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>