force-app/main/default/objects/CC_Document_Item__c/fields/CC_Case__c.field-meta.xml
<CustomField>
    <fullName>CC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>