force-app/main/default/objects/CC_Document_Item__c/fields/CC_Comments__c.field-meta.xml
<CustomField>
    <fullName>CC_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>