force-app/main/default/objects/CC_Document_Item__c/fields/CC_Contract__c.field-meta.xml
<CustomField>
    <fullName>CC_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>