force-app/main/default/objects/CC_Document_Item__c/fields/CC_Document_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Document_Description__c</fullName>
    <label>Document Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>