force-app/main/default/objects/CC_Document_Item__c/fields/CC_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Document_Name__c</fullName>
    <label>Document Name</label>
    <type>TextArea</type>
</CustomField>