force-app/main/default/objects/CC_Document_Item__c/fields/CC_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highest Level of Education</fullName>
            </value>
            <value>
                <fullName>DCYF/CANTS Background Check</fullName>
            </value>
            <value>
                <fullName>Comprehensive Background Check</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Professional Credential Information</fullName>
            </value>
            <value>
                <fullName>Coursework</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Provider Application Contracted</fullName>
            </value>
            <value>
                <fullName>Administrative Review Requested</fullName>
            </value>
            <value>
                <fullName>Photo ID</fullName>
            </value>
            <value>
                <fullName>Proof Of Income</fullName>
            </value>
            <value>
                <fullName>Proof Of Insurance</fullName>
            </value>
            <value>
                <fullName>Proof of Expense</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>