force-app/main/default/objects/CC_Document_Item__c/fields/CC_Document_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Document_Unique_Id__c</fullName>
    <label>Document Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>