force-app/main/default/objects/CC_Document_Item__c/fields/CC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>