force-app/main/default/objects/CC_Document_Item__c/fields/CC_EFT_W9_Info__c.field-meta.xml
<CustomField>
    <fullName>CC_EFT_W9_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EFT &amp; W9 Info</label>
    <referenceTo>CC_EFT_W9_Info__c</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>