force-app/main/default/objects/CC_Document_Item__c/fields/CC_Eligibility_Determination__c.field-meta.xml
<CustomField>
    <fullName>CC_Eligibility_Determination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Determination</label>
    <referenceTo>CC_Eligibility_Determination__c</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>