force-app/main/default/objects/CC_Document_Item__c/fields/CC_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>CC_Help_Text__c</fullName>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>