force-app/main/default/objects/CC_Document_Item__c/fields/CC_I_do_not_have_this_document__c.field-meta.xml
<CustomField>
    <fullName>CC_I_do_not_have_this_document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I do not have this document at this time</label>
    <type>Checkbox</type>
</CustomField>