force-app/main/default/objects/CC_Document_Item__c/fields/CC_Incident_Reporting__c.field-meta.xml
<CustomField>
    <fullName>CC_Incident_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Incident Reporting</label>
    <referenceTo>Incident_Reporting__c</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>