force-app/main/default/objects/CC_Document_Item__c/fields/CC_Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>CC_Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>