force-app/main/default/objects/CC_Document_Item__c/fields/CC_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CC_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to attach doc below visit.</description>
    <label>Inspection</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>CC_Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>