force-app/main/default/objects/CC_Document_Item__c/fields/CC_Is_Additional_Request_Document__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Additional_Request_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Additional Request Document</label>
    <type>Checkbox</type>
</CustomField>