force-app/main/default/objects/CC_Document_Item__c/fields/CC_Is_System_Generated__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System Generated?</label>
    <type>Checkbox</type>
</CustomField>