force-app/main/default/objects/CC_Document_Item__c/fields/CC_Payment_Resolution_Request__c.field-meta.xml
<CustomField>
    <fullName>CC_Payment_Resolution_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Resolution Request</label>
    <referenceTo>CC_PaymentResolutionRequest__c</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>