force-app/main/default/objects/CC_Document_Item__c/fields/CC_Person_Education__c.field-meta.xml
<CustomField>
    <fullName>CC_Person_Education__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Education</label>
    <referenceTo>PersonEducation</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>