force-app/main/default/objects/CC_Document_Item__c/fields/CC_Preliminary_Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>CC_Preliminary_Application_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preliminary Application Reference</label>
    <referenceTo>PreliminaryApplicationRef</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>