force-app/main/default/objects/CC_Document_Item__c/fields/CC_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CC_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>ProgramEnrollment</referenceTo>
    <relationshipLabel>Document Items</relationshipLabel>
    <relationshipName>Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>