force-app/main/default/objects/CC_Document_Item__c/fields/CC_Required__c.field-meta.xml
<CustomField>
    <fullName>CC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>