force-app/main/default/objects/CC_Document_Item__c/fields/CC_Return_For_Revision_Requested__c.field-meta.xml
<CustomField>
    <fullName>CC_Return_For_Revision_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return For Revision Requested?</label>
    <type>Checkbox</type>
</CustomField>