force-app/main/default/objects/CC_Document_Item__c/fields/CC_Review_Comment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>CC_Review_Comment_DateTime__c</fullName>
    <label>Review Comment DateTime</label>
    <type>DateTime</type>
</CustomField>