force-app/main/default/objects/CC_Document_Item__c/fields/CC_Review_Commented_By__c.field-meta.xml
<CustomField>
    <fullName>CC_Review_Commented_By__c</fullName>
    <label>Review Commented By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>