force-app/main/default/objects/CC_Document_Item__c/fields/CC_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CC_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>