force-app/main/default/objects/CC_Document_Item__c/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Re-Submitted</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
            <value>
                <fullName>Returned for Revision</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Due</fullName>
                <isActive>false</isActive>
                <label>Due</label>
            </value>
            <value>
                <fullName>Not Satisfactory</fullName>
                <isActive>false</isActive>
                <label>Not Satisfactory</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Return for revision</fullName>
                <isActive>false</isActive>
                <label>Return for revision</label>
            </value>
            <value>
                <fullName>Reviewed/Approved</fullName>
                <isActive>false</isActive>
                <label>Reviewed/Approved</label>
            </value>
            <value>
                <fullName>Unsubmitted</fullName>
                <isActive>false</isActive>
                <label>Unsubmitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>