force-app/main/default/objects/CC_Document_Item__c/fields/CC_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Submit_Date__c</fullName>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>