force-app/main/default/objects/CC_Document_Item__c/fields/Is_Required_Document_Skipped_By_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_Document_Skipped_By_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required Document Skipped By User</label>
    <type>Checkbox</type>
</CustomField>